src/render/assets/css/input.module.css
:root {
    --input-height: 42px;
    --toggle-icon-size: 18px;
}

.inputGroup {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    width: 100%;
}
.inputGroup + .inputGroup {
    margin-top: 1em;
}
.inputGroup .head {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-between;
    align-items: center;
}
.inputGroup .bottom {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: flex-end;
    align-items: center;
    margin-top: 5px;
}
.inputGroup label {
    padding: 0 2px;
    font-size: 14px;
    line-height: 1.5rem;
    font-weight: 600;
    color: var(--text-color-1);
    width: 100%;
}
.inputGroup.error label {
    color: var(--text-negative);
}
.inputGroup label.hidden {
    display: none;
}
.inputGroup input, select {
    width: 100%;
    margin: 0.125rem 0;
}

.inputWrapper {
    position: relative;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    margin-top: 0.25rem;
}

.inputWrapper .toggleIcon {
    position: absolute;
    top: 0;
    bottom: 0;
    padding: calc((var(--input-height) - var(--toggle-icon-size)) / 2);
    right: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    outline: none !important;
    color: var(--interactive-normal);
    opacity: .7;
    font-size: 1.5rem;
}
.inputWrapper .toggleIcon:hover {
    color: var(--interactive-hover);
}
.inputWrapper .toggleIcon > svg {
    width: var(--toggle-icon-size);
    height: var(--toggle-icon-size);
}

.inputWrapper .actionButton {
    position: relative;
    margin-left: 8px;
    padding: 0.5rem 0.75rem;
    height: var(--input-height);
    width: auto;
    display: flex;
    align-items: center;
    justify-content: center;
    line-height: 1;
    text-align: center;
    border-style: solid;
    border-color: transparent;
    border-width: 2px;
    border-radius: 0.375rem;
    color: var(--interactive-normal);
    background: var(--background-secondary);
    cursor: pointer;
    transition: all .2s;
}

.inputWrapper .actionButton:hover {
    color: var(--interactive-hover);
    background-color: var(--background-secondary-alt);
}
.inputWrapper .actionButton:active {
    color: var(--interactive-hover);
    background-color: var(--background-tertiary);
}

input, select {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    background-color: var(--inp-background-normal);
    border-style: solid;
    border-color: transparent;
    border-width: 2px;
    border-radius: 0.375rem;
    padding-top: 0.5rem;
    padding-right: 0.75rem;
    padding-bottom: 0.5rem;
    padding-left: 0.75rem;
    font-size: 1rem;
    line-height: 3rem;
    color: var(--text-normal);
    height: var(--input-height);
    opacity: 1;
    outline: none;
}

input:focus, select:focus {
    outline: 2px solid transparent;
    outline-offset: 2px;
    border-color: var(--brand-color);
}

/* Chrome, Safari, Edge, Opera */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type=number] {
  -moz-appearance: textfield;
}

input:disabled, select:disabled {
    background-color: var(--inp-background-disabled);
}

.actionBlock {
    align-items: center;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    margin-top: 2em;
}

.actionBlock button {
    width: 100%;
}

